--- a/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Inhaltsanzahl";
 "Zaman Tasarrufu" = "Gesparte Zeit";
 "Kelime Sayısı" = "Wortanzahl";
+"Özet" = "Zusammenfassung";
+"Tamam" = "Okay";
