--- a/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Content Count";
 "Zaman Tasarrufu" = "Time Saved";
 "Kelime Sayısı" = "Word Count";
+"Özet" = "Summary";
+"Tamam" = "Okay";
