--- a/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Recuento de contenido";
 "Zaman Tasarrufu" = "Tiempo ahorrado";
 "Kelime Sayısı" = "Recuento de palabras";
+"Özet" = "Resumen";
+"Tamam" = "De acuerdo";
