--- a/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Nombre de contenus";
 "Zaman Tasarrufu" = "Temps économisé";
 "Kelime Sayısı" = "Nombre de mots";
+"Özet" = "Résumé";
+"Tamam" = "D'accord";
