--- a/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Conteggio dei contenuti";
 "Zaman Tasarrufu" = "Tempo risparmiato";
 "Kelime Sayısı" = "Conteggio delle parole";
+"Özet" = "Riassunto";
+"Tamam" = "Va bene";
