--- a/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Contagem de conteúdo";
 "Zaman Tasarrufu" = "Tempo economizado";
 "Kelime Sayısı" = "Contagem de palavras";
+"Özet" = "Resumo";
+"Tamam" = "Tudo bem";
