--- a/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
@@ -24,3 +24,5 @@
 "İçerik Sayısı" = "Количество контента";
 "Zaman Tasarrufu" = "Сэкономленное время";
 "Kelime Sayısı" = "Количество слов";
+"Özet" = "Резюме";
+"Tamam" = "Хорошо";
