--- a/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Wortanzahl";
 "Özet" = "Zusammenfassung";
 "Tamam" = "Okay";
+"Özeti Paylaş" = " Zusammenfassung teilen";
+"Yeni Güncelleme Sizi Bekliyor!" = "Ein neues Update wartet auf Sie!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "Wir haben unsere App aktualisiert, um die beste Erfahrung zu bieten! Jetzt aktualisieren!";
+"Güncelle" = "Aktualisieren";
+"🎥 Videonun Özeti:" = "🎥 Zusammenfassung des Videos:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Diese Zusammenfassung wurde mit der YouTube Summarize-App erstellt! Lade sie herunter und lerne mehr aus Videos! 📚";
