--- a/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Word Count";
 "Özet" = "Summary";
 "Tamam" = "Okay";
+"Özeti Paylaş" = " Share Summary";
+"Yeni Güncelleme Sizi Bekliyor!" = "A New Update is Waiting for You!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "We have updated our app to provide the best experience! Update now!";
+"Güncelle" = "Update";
+"🎥 Videonun Özeti:" = "🎥 Summary of the Video:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "This summary was created with the YouTube Summarize app! Download it and learn more from videos! 📚";
