--- a/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Recuento de palabras";
 "Özet" = "Resumen";
 "Tamam" = "De acuerdo";
+"Özeti Paylaş" = " Compartir resumen";
+"Yeni Güncelleme Sizi Bekliyor!" = "¡Una nueva actualización te espera!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "¡Hemos actualizado nuestra aplicación para ofrecerte la mejor experiencia! ¡Actualiza ahora!";
+"Güncelle" = "Actualizar";
+"🎥 Videonun Özeti:" = "🎥 Resumen del vídeo:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Este resumen fue creado con la aplicación YouTube Summarize! ¡Descárgala y aprende más de los videos! 📚";
