--- a/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Nombre de mots";
 "Özet" = "Résumé";
 "Tamam" = "D'accord";
+"Özeti Paylaş" = " Partager le résumé";
+"Yeni Güncelleme Sizi Bekliyor!" = "Une nouvelle mise à jour vous attend !";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "Nous avons mis à jour notre application pour vous offrir la meilleure expérience ! Mettez à jour maintenant !";
+"Güncelle" = "Mettre à jour";
+"🎥 Videonun Özeti:" = "🎥 Résumé de la vidéo:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Ce résumé a été créé avec l'application YouTube Summarize ! Téléchargez-la et apprenez-en davantage à partir des vidéos ! 📚";
