--- a/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Conteggio delle parole";
 "Özet" = "Riassunto";
 "Tamam" = "Va bene";
+"Özeti Paylaş" = " Condividi riassunto";
+"Yeni Güncelleme Sizi Bekliyor!" = "Un nuovo aggiornamento ti aspetta!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "Abbiamo aggiornato la nostra app per offrirti la migliore esperienza! Aggiorna ora!";
+"Güncelle" = "Aggiorna";
+"🎥 Videonun Özeti:" = "🎥 Riassunto del video:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Questo riassunto è stato creato con l'app YouTube Summarize! Scaricala e scopri di più dai video! 📚";
