--- a/Video Summarize/Video Summarize/Localizable/ja.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/ja.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "単語数";
 "Özet" = "要約";
 "Tamam" = "わかりました";
+"Özeti Paylaş" = " 概要を共有";
+"Yeni Güncelleme Sizi Bekliyor!" = "新しいアップデートがあなたを待っています！";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "最高の体験を提供するためにアプリを更新しました！ 今すぐ更新してください！";
+"Güncelle" = "更新";
+"🎥 Videonun Özeti:" = "🎥 ビデオの概要:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "この概要は YouTube Summarize アプリで作成されました！ダウンロードして動画からもっと学びましょう！📚";
