--- a/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Contagem de palavras";
 "Özet" = "Resumo";
 "Tamam" = "Tudo bem";
+"Özeti Paylaş" = " Compartilhar Resumo";
+"Yeni Güncelleme Sizi Bekliyor!" = "Uma nova atualização está esperando por você!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "Atualizamos nosso aplicativo para oferecer a melhor experiência! Atualize agora!";
+"Güncelle" = "Atualizar";
+"🎥 Videonun Özeti:" = "🎥 Resumo do vídeo:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Este resumo foi criado com o aplicativo YouTube Summarize! Baixe-o e aprenda mais com os vídeos! 📚";
