--- a/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Количество слов";
 "Özet" = "Резюме";
 "Tamam" = "Хорошо";
+"Özeti Paylaş" = " Поделиться резюме";
+"Yeni Güncelleme Sizi Bekliyor!" = "Новое обновление ждет вас!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "Мы обновили приложение, чтобы предоставить лучший опыт! Обновите сейчас!";
+"Güncelle" = "Обновить";
+"🎥 Videonun Özeti:" = "🎥 Сводка видео:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Этот свод был создан с помощью приложения YouTube Summarize! Скачайте его и узнайте больше из видео! 📚";
