--- a/Video Summarize/Video Summarize/Localizable/tr.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/tr.lproj/Localizable.strings
@@ -26,3 +26,9 @@
 "Kelime Sayısı" = "Kelime Sayısı";
 "Tamam" = "Tamam";
 "Özet" = "Özet";
+"Özeti Paylaş" = " Özeti Paylaş";
+"Yeni Güncelleme Sizi Bekliyor!" = "Yeni Güncelleme Sizi Bekliyor!";
+"En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!" = "En iyi deneyimi sunabilmemiz için uygulamamızı güncelledik! Hemen güncelleyin!";
+"Güncelle" = "Güncelle";
+"🎥 Videonun Özeti:" = "🎥 Videonun Özeti:";
+"Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚";
