--- a/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/de.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Aktualisieren";
 "🎥 Videonun Özeti:" = "🎥 Zusammenfassung des Videos:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Diese Zusammenfassung wurde mit der YouTube Summarize-App erstellt! Lade sie herunter und lerne mehr aus Videos! 📚";
+"Videonuz İşleniyor" = "Ihr Video wird verarbeitet";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Wir arbeiten daran, eine großartige Zusammenfassung für Sie zu erstellen";
+"⏳ İşleniyor..." = "⏳ Verarbeitung...";
