--- a/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/en.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Update";
 "🎥 Videonun Özeti:" = "🎥 Summary of the Video:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "This summary was created with the YouTube Summarize app! Download it and learn more from videos! 📚";
+"Videonuz İşleniyor" = "Your video is being processed";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "We are working to create a great summary for you";
+"⏳ İşleniyor..." = "⏳ Processing...";
