--- a/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/es.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Actualizar";
 "🎥 Videonun Özeti:" = "🎥 Resumen del vídeo:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Este resumen fue creado con la aplicación YouTube Summarize! ¡Descárgala y aprende más de los videos! 📚";
+"Videonuz İşleniyor" = "Tu video está siendo procesado";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Estamos trabajando para crear un gran resumen para ti";
+"⏳ İşleniyor..." = "⏳ Procesando...";
