--- a/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/fr.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Mettre à jour";
 "🎥 Videonun Özeti:" = "🎥 Résumé de la vidéo:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Ce résumé a été créé avec l'application YouTube Summarize ! Téléchargez-la et apprenez-en davantage à partir des vidéos ! 📚";
+"Videonuz İşleniyor" = "Votre vidéo est en cours de traitement";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Nous travaillons pour créer un excellent résumé pour vous";
+"⏳ İşleniyor..." = "⏳ En traitement...";
