--- a/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/it.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Aggiorna";
 "🎥 Videonun Özeti:" = "🎥 Riassunto del video:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Questo riassunto è stato creato con l'app YouTube Summarize! Scaricala e scopri di più dai video! 📚";
+"Videonuz İşleniyor" = "Il tuo video è in fase di elaborazione";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Stiamo lavorando per creare un ottimo riepilogo per te";
+"⏳ İşleniyor..." = "⏳ Elaborazione in corso...";
