--- a/Video Summarize/Video Summarize/Localizable/ja.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/ja.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "更新";
 "🎥 Videonun Özeti:" = "🎥 ビデオの概要:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "この概要は YouTube Summarize アプリで作成されました！ダウンロードして動画からもっと学びましょう！📚";
+"Videonuz İşleniyor" = "動画を処理中です";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "素晴らしい要約を作成するために作業を続けています";
+"⏳ İşleniyor..." = "⏳ 処理中...";
