--- a/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/pt-PT.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Atualizar";
 "🎥 Videonun Özeti:" = "🎥 Resumo do vídeo:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Este resumo foi criado com o aplicativo YouTube Summarize! Baixe-o e aprenda mais com os vídeos! 📚";
+"Videonuz İşleniyor" = "Seu vídeo está sendo processado";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Estamos trabalhando para criar um ótimo resumo para você";
+"⏳ İşleniyor..." = "⏳ Processando...";
