--- a/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/ru.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Обновить";
 "🎥 Videonun Özeti:" = "🎥 Сводка видео:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Этот свод был создан с помощью приложения YouTube Summarize! Скачайте его и узнайте больше из видео! 📚";
+"Videonuz İşleniyor" = "Ваше видео обрабатывается";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Мы работаем над созданием отличного резюме для вас";
+"⏳ İşleniyor..." = "⏳ Обработка...";
