--- a/Video Summarize/Video Summarize/Localizable/tr.lproj/Localizable.strings
+++ b/Video Summarize/Video Summarize/Localizable/tr.lproj/Localizable.strings
@@ -32,3 +32,6 @@
 "Güncelle" = "Güncelle";
 "🎥 Videonun Özeti:" = "🎥 Videonun Özeti:";
 "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚" = "Bu özeti YouTube Summarize uygulamasıyla oluşturdum! Sen de indir ve videolardan daha fazlasını öğren! 📚";
+"Videonuz İşleniyor" = "Videonuz İşleniyor";
+"Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz" = "Size güzel bir özet çıkarmak için çalışmalara devam ediyoruz";
+"⏳ İşleniyor..." = "⏳ İşleniyor...";
